# hickey

./: .gitignore  CLAUDE.md  LICENSE  README.md  marketplace.json  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: .mcp.json  marketplace.json  plugin.json
.claude-plugin/agents/: hickey.md
.claude/agents/: memory-reviewer.md
plugin/: settings.json
plugin/hooks/: hooks.json
plugins/hickey/: settings.json
plugins/hickey/.claude-plugin/: plugin.json
plugins/hickey/agents/: hickey.md
src/hickey/: api.py  cache.py  cli.py  digest.py  main.py  mcp.py  model.py  server.py  store.py
tests/: test_digest.py  test_store.py
