[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hickey"
version = "0.1.0"
description = "A memory system that leaves a mark."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
vectors = [
    "sqlite-vec>=0.1.6",
    "fastembed>=0.4",
]

[project.scripts]
hickey = "hickey.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hickey"]

[tool.pytest.ini_options]
testpaths = ["tests"]
