[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hickey"
version = "0.1.0"
description = "A memory system that leaves a mark."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "fastembed>=0.4",
    "mcp>=1.0",
    "sqlite-vec>=0.1.6",
]

[project.scripts]
hickey = "hickey.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hickey"]

[tool.pytest.ini_options]
testpaths = ["tests"]
